--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -20,7 +20,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("../../assets/img/Mask\ group.png");
+  background-image: url("../../assets/img/Mask group.png");
   background-size: cover;
   background-position: center;
   margin-top: -87px;
