--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -86,7 +86,7 @@
     font-weight: 400;
     line-height: 19.12px;
     text-align: left;
-    color: #7A7A7A;
+    color: rgb(50, 50, 50);
     margin: 0;
   }
 
